Rearrange entries